--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <li><a class="linkedin-text-hvr" href="javascript:void(0)"><i class="fab fa-linkedin-in"></i></a></li>
                         <li><a class="instagram-text-hvr" href="javascript:void(0)"><i class="fab fa-instagram"></i></a></li>
                     </ul>
-                    <p class="">&copy; 2023 MegaOne. Made With Love by <span class="d-inline d-lg-block"> ThemesIndustry</span></p>
+                    <p class="">&copy; 2023 Yanke's Landscaping'. Made With Love by <span class="d-inline d-lg-block"> Amandeep</span></p>
                 </div>
             </div>
         </div>
@@ -173,15 +173,12 @@
                             <div class="review-content">
                                 <div class="review-des">
                                     <p>
-                                        We have a number of different teams within our agency that specialise in different
-                                        areas of business so you can be sure that you receive a generic service and although
-                                        we boast years and years of service we can ensure you that is a good thing in this
-                                        industry.
+                                        We've relied on Yanke's Landscaping for years, and they never disappoint. Their team transformed our backyard into a lush, inviting space, and their snow removal service keeps our property safe and accessible all winter. Highly recommended!
                                     </p>
                                 </div>
                                 <div class="reiview-user">
                                     <p>
-                                        John Smith - New York City
+                                        Sarah L - Oakville
                                     </p>
                                     <span class="d-inline-block test-star">
                                         <i class="fas fa-star"></i>
@@ -196,15 +193,12 @@
                             <div class="review-content">
                                 <div class="review-des">
                                     <p>
-                                        We have a number of different teams within our agency that specialise in different
-                                        areas of business so you can be sure that you receive a generic service and although
-                                        we boast years and years of service we can ensure you that is a good thing in this
-                                        industry.
+                                        Professional, reliable, and always on time! Yanke’s crew is thorough with both landscaping and snow removal. Our commercial property has never looked better, and it’s such a relief knowing they’re taking care of everything. Thank you!
                                     </p>
                                 </div>
                                 <div class="reiview-user">
                                     <p>
-                                        John Smith - New York City
+                                        John S - Oakville
                                     </p>
                                     <span class="d-inline-block test-star">
                                         <i class="fas fa-star"></i>
@@ -219,15 +213,12 @@
                             <div class="review-content">
                                 <div class="review-des">
                                     <p>
-                                        We have a number of different teams within our agency that specialise in different
-                                        areas of business so you can be sure that you receive a generic service and although
-                                        we boast years and years of service we can ensure you that is a good thing in this
-                                        industry.
+                                        The team at Yanke's is simply the best! They took our landscaping ideas and turned them into reality, adding so much value to our property. Their winter services are also a lifesaver during Ontario’s tough winters
                                     </p>
                                 </div>
                                 <div class="reiview-user">
                                     <p>
-                                        John Smith - New York City
+                                        Nancy P - New York City
                                     </p>
                                     <span class="d-inline-block test-star">
                                         <i class="fas fa-star"></i>
