--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="row">
                 <div class="col-12 col-lg-6 d-flex align-items-center text-center text-lg-left">
                     <div class="heading-area wow slideInLeft">
-                        <h4 class="heading">Yanke's Landscaping & Snow Removal<span class="d-block">Since 2004</span></h4>
+                        <h4 class="heading">YANKE's Landscaping & Snow Removal<span class="d-block">Since 2004</span></h4>
                         <p class="text">We specialize in delivering tailored landscaping and snow removal solutions to enhance the beauty, safety, and functionality of every property. Let us handle the hard work, so you can enjoy a pristine outdoor space all year round.</p>
                         <a href="#about" class="scroll button"><strong>Learn More</strong></a>
                     </div>
