--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <div class="col-12">
                     <div class="about-area">
                         <h4 class="heading-sub">About Yanke's Landscaping</h4>
-                        <h1 class="heading-about">Landscaping and Snow Removal Since 2004</h1>
+                        <h1 class="heading-about">Our History</h1>
                         <div class="image-div">
                             <video src="builder-construction/images/snow.mp4" autoplay muted loop playsinline>
                                 Your browser does not support the video tag.
