--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                             <div class="review-content">
                                 <div class="review-des">
                                     <p>
-                                        Professional, reliable, and always on time! Yanke’s crew is thorough with both landscaping and snow removal. Our commercial property has never looked better, and it’s such a relief knowing they’re taking care of everything. Thank you!
+                                        Professional, reliable, and always on time! Yanke's crew is thorough with both landscaping and snow removal. Our commercial property has never looked better, and it's such a relief knowing they're taking care of everything. Thank you!
                                     </p>
                                 </div>
                                 <div class="reiview-user">
@@ -213,7 +213,7 @@
                             <div class="review-content">
                                 <div class="review-des">
                                     <p>
-                                        The team at Yanke's is simply the best! They took our landscaping ideas and turned them into reality, adding so much value to our property. Their winter services are also a lifesaver during Ontario’s tough winters
+                                        The team at Yanke's is simply the best! They took our landscaping ideas and turned them into reality, adding so much value to our property. Their winter services are also a lifesaver during Ontario's tough winters
                                     </p>
                                 </div>
                                 <div class="reiview-user">
@@ -343,7 +343,7 @@
                         <div id="js-loadMore-lightbox-gallery" class="cbp-l-loadMore-button text-data wow fadeInUp" data-wow-delay="650ms">
                             <div class="row portfolio-foot-detail text-data-inner">
                                 <div class="col-7 col-lg-4 offset-lg-6 text-left pl-4">
-                                    <span class="p-text">We've Completed More Then</span>
+                                    <span class="p-text">We've Completed More Than</span>
                                     <h4 class="p-num">530</h4>
                                     <span class="p-text">Projects for Our amazing Clients</span>
                                 </div>
